--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React Sports Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- include an element for ReactDOM to attach our React-generated elements to -->
@@ -17,25 +18,10 @@
     <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <!-- include our JS+JSX for the React Appliccation -->
-<script type="text/babel">
+<script type="text/babel" src="./reactApp.js">
 
 // An App component under which all other components will be added
-function App (props) {
-  return (
-    <div>
-      <h1>Welcome to the Sports Game starter!</h1>
-      <em>This file represents the way your code should look after completing the <strong>Setup</strong> steps in the instructions.</em>
-    </div>
-  )
-}
 
-
-
-// Render the App
-ReactDOM.render(
-  <App />,
-  document.getElementById('root')
-)
 </script>
 </body>
 </html>
